alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -299,7 +299,6 @@ h1 {
   font-weight: bold;
   color: var(--text-color);
 }
-
 .container1 {
   text-align: center;
   align-items: center;
@@ -307,6 +306,9 @@ h1 {
   border: 2px solid var(--secondary-color);
   border-radius: 15px;
   background: var(--box-bg-color);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .content {
@@ -359,7 +361,8 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 .intro-section {
@@ -482,7 +485,7 @@ h1 {
   transition: color 0.3s ease;
 }
 
-social-icons a:hover {
+.social-icons a:hover {
   color: var(--accent-color);
 }
 
@@ -505,9 +508,7 @@ hr {
 }
 
 /* Specific container styles for different sections */
- #products.container {
-  overflow: scroll;
-}
+
 /*
 #secured-data.container {
   padding: 20px;
@@ -539,7 +540,7 @@ hr {
 }
 
 /* Media Queries for Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   body {
     margin: 0;
   }
@@ -629,9 +630,9 @@ hr {
     font-size: var(--font-size-extra-small);
   }
 }
-
+/* 
 @media only screen and (max-width: 768px) and (orientation: landscape) {
   #products.container{
     display: block
   }
-}
+} */
